@@ -25,6 +25,9 @@ hw-detect (1.65) UNRELEASED; urgency=low
     because it has dependencies outside base, remove it rather than leaving
     the db in an inconsistent state. Note that bugs have been filed to get all
     such firmware packages fixed. Closes: #492248
+  * check-missing-firmware: Avoid trailing space in $files that caused it to
+    look for firmware packages containing a file named "" (and probably match
+    any package). Closes: #492247
 
  -- Frans Pop <fjp@debian.org>  Wed, 23 Jul 2008 19:54:37 +0200
 
